Added Activity classes for LogIn & UI screens

--- a/IAB330/IAB330.csproj
+++ b/IAB330/IAB330.csproj
@@ -49,6 +49,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LogInActivity.cs" />
+    <Compile Include="SplashActivity.cs" />
     <Compile Include="Database.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
