Completed 90% of UI screens...sans specific graphics to be imported from photoshop

--- a/IAB330/IAB330.csproj
+++ b/IAB330/IAB330.csproj
@@ -74,6 +74,15 @@
     <AndroidResource Include="Resources\layout\MakeRequest.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
+    <AndroidResource Include="Resources\layout\AnswerRequest.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+    <AndroidResource Include="Resources\layout\RequestsHome.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+    <AndroidResource Include="Resources\layout\ReceivedRequest.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\layout\Main.axml">
